[package]
name = "sonday-coin-pusher"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies.bevy]
version = "0.15.1"

[dependencies]
avian3d = { version = "0.2.0", features = ["parallel", "simd"] }
currency = "0.4.0"
rand = "0.8.5"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
too-many-arguments = "allow"
